# PipeChecker

./: .gitignore  .pipecheckrc.example.yml  CHANGELOG.md  COMPLETE_GUIDE.md  Cargo.toml  GITIGNORE_VERIFIED.md  IMPROVEMENTS.md  LICENSE-APACHE  LICENSE-MIT  NPM_PUBLISHING.md  QUICK_REFERENCE.md  README.md  START_HERE.md  TUI_GUIDE.md  deny.toml  package.json  pipecheck_project_plan.docx  quickstart.sh  setup-npm.sh
.github/workflows/: ci.yml  release.yml
.qwen/: PROJECT_SUMMARY.md  settings.json  settings.json.orig
agent/: README.md  agent_spec.json
agents/: README.md  architect_agent.json  core_developer_agent.json  devops_agent.json  documentation_agent.json  project_manager_agent.json  testing_agent.json  wasm_agent.json
docs/: CONTRIBUTING.md  FEATURES_V0.2.0.md  FEATURES_V0.2.10.md  FEATURES_V0.2.4.md  FEATURES_V0.2.5.md  FEATURES_V0.2.6.md  FEATURES_V0.2.7.md  FEATURES_V0.2.8.md  FEATURES_V0.2.9.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md  PUBLISHING_CHECKLIST.md  index.md
scripts/: install.js
src/: config.rs  error.rs  fix.rs  lib.rs  main.rs  models.rs  tui.rs
src/auditors/: dag.rs  docker.rs  include.rs  mod.rs  pinning.rs  schema.rs  secrets.rs  syntax.rs  timeout.rs
src/parsers/: circleci.rs  github.rs  gitlab.rs  mod.rs
templates/: docker.yml  gitlab-node.yml  node.yml  pre-commit-hook.sh  rust.yml
tests/: auditors_test.rs  config_edge_cases.rs  config_test.rs  dag_extended.rs  error_test.rs  main_test.rs  parser_circleci_edge.rs  parser_github_edge.rs  parser_gitlab_edge.rs  parser_test.rs  secrets_test.rs  syntax_extended.rs  timeout_test.rs
(+8 files in other folders)
