[package]
name = "pipecheck"
version = "0.0.1"
edition = "2021"
authors = ["Pipecheck Contributors"]
description = "CI/CD Pipeline Auditor - Catch errors before you push"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ayyankhan101/PipeCheck"
homepage = "https://github.com/Ayyankhan101/PipeCheck"
documentation = "https://docs.rs/pipecheck"
readme = "README.md"
keywords = ["ci", "cd", "pipeline", "audit", "yaml"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
petgraph = "0.6"
clap = { version = "4.5", features = ["derive", "color"] }
thiserror = "1.0"
regex = "1.10"
colored = "2.1"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.36", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["network"]
network = ["tokio", "reqwest"]
wasm = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[[bin]]
name = "pipecheck"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.4"
